kustomize/base/globex-route-globex-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globex-web
  namespace: globex
  labels:
    app.kubernetes.io/name: globex-web
    app.kubernetes.io/instance: globex-user1
    app.kubernetes.io/version: "latest"
spec:
  to:
    kind: Service
    name: globex-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
